# kakaotalk-wayland-sni

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.ko.md  README.md
.github/workflows/: build.yml
packaging/: kakaotalk-wayland-sni.service.in
scripts/: install.sh  uninstall.sh
src/: actions.cpp  actions.hpp  config.cpp  config.hpp  main.cpp  process_detector.cpp  process_detector.hpp  status_notifier.cpp  status_notifier.hpp
tests/: core_tests.cpp
